# Sloth-bot

./: README.md
auto_climb/src/: auto_climb.cpp  auto_climb_function.cpp
auto_climb/src/linux64/: Makefile  auto_climb  auto_climb_function
climb_down/include/climb_down/control/: control_dyn.h
climb_down/src/: climb_down.cpp  one_arm_climb.cpp
climb_down/src/linux64/: Makefile  climb_down
climbing/include/climbing/control/: control_dyn.h
climbing/src/climb/: climb.cpp  control_dyn.cpp
climbing/src/climb/linux64/: Makefile  climb
commanded_climb/include/commanded_climb/control/: control_dyn.h
commanded_climb/src/: commanded_climb.cpp
commanded_climb/src/linux64/: Makefile  commanded_climb
cv/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rung_detection.cpp
cv/src/linux64/: Makefile
full_auto_climb/include/full_auto/control/: control_dyn.h
full_auto_climb/src/: full_auto.cpp
full_auto_climb/src/linux64/: Makefile  full_auto
jetson_nano/include/jetson_nano/control/: control_dyn.h
jetson_nano/src/: jetson_nano.cpp
jetson_nano/src/linux64/: Makefile  jetson_nano
one_arm_climb/include/one_arm/control/: control_dyn.h
one_arm_climb/src/: one_arm_climb.cpp
one_arm_climb/src/linux64/: one_arm_climb
read_position/src/read/: read_pose.cpp
read_position/src/read/linux64/: Makefile  read
test_with_control/include/test_with_control/control/: control_dyn.h
test_with_control/src/linux64/: Makefile  full_auto
